# OTUS_HomeWorks

./: CMakeLists.txt  README.md
ArchitectureAndDesignPatterns_HW5_ExtandableFactoryAndIoC/: CMakeLists.txt  extandablefactoryandioc.cpp  extandablefactoryandioc.hpp
ArchitectureAndDesignPatterns_HW5_ExtandableFactoryAndIoC/tests/: test_ExtandableFactoryAndIoC.cpp
source/: ioc.cpp  ioc.hpp  ioc.hpp.bak
source/tests/: test_IoC.cpp  test_IoC.cpp.bak
